--- a/src/components/Movie-Item/MovieItem.scss
+++ b/src/components/Movie-Item/MovieItem.scss
@@ -1,7 +1,7 @@
-@use '../../../styles/variables' as vars;
-@use '../../../styles/mixins' as mxn;
+@use '../../styles/variables' as vars;
+@use '../../styles/mixins' as mxn;
 
-.movie-item {
+.Movie-Item {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -9,7 +9,7 @@
     margin: 0 1rem 1rem;
 }
 
-.movie-title {
+.Movie-Title {
     .add-to-fav {
         position: absolute;
         top: 2rem;
@@ -17,13 +17,13 @@
     }
 }
 
-.image {
+.Movie-Image {
     margin-bottom: 2rem;
 }
 
-.description {
+.Movie-Desc {
     margin-bottom: 2rem;
-    &-text {
+    .description-text {
         font-size: 1rem;
         height: 5.5rem;
         width: 90%;
@@ -42,27 +42,31 @@
     }
 }
 
-.details {
+.Movie-Details {
     display: flex;
     flex-direction: column;
     font-size: 1.2rem;
     margin-bottom: 2rem;
 }
 
+.Movie-Genres {
+    font-size: 1.2rem;
+}
+
 @include mxn.for-desktop-up {
-    .movie-item {
+    .Movie-Item {
         display: grid;
         grid-template-columns: [first] 25% [second] 25% [third] 25% [fourth] 25% [end];
         grid-template-rows: [row1] 100px [row1-end] 33% [second-line] auto [last-line];
 
-        .movie-title {
+        .Movie-Title {
             grid-column-start: first;
             grid-column-end: five;
             grid-row-start: row1;
             grid-row-end: row1-end;
         }
 
-        .image {
+        .Movie-Image {
             grid-column-start: 1;
             grid-column-end: span 1;
             grid-row-start: 2;
@@ -70,14 +74,14 @@
             margin-bottom: 3rem;
         }
 
-        .description {
+        .Movie-Desc {
             grid-column-start: second;
             grid-column-end: span 2;
             grid-row-start: 2;
             grid-row-end: span last-line;
         }
 
-        .details {
+        .Movie-Details {
             grid-column-start: 4;
             grid-column-end: span 2;
             grid-row-start: 2;
