--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+@use './variables' as vars;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.btn {
+  background-color: vars.$color-blue;
+  color: vars.$color-white;
+  border: 2px solid vars.$color-blue;
+  border-radius: 30px;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.3s ease-out;
+  &.selected {
+      color: vars.$color-blue;
+      background-color: vars.$color-dark;
+  }
 }
