--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -19,7 +19,7 @@
 
 .Main-Search {
     font-size: 1.2rem;
-    border-radius: 30px;
+    border-radius: vars.$border-radix;
     border: 2px solid vars.$color-border;
     margin: 1rem;
     padding: 1rem;
@@ -28,7 +28,7 @@
 
 .Main-Submit, .Main-Filters-Button, .Main-Sorting-Button {
     display: block;
-    margin: 0 auto 1rem;
+    margin: 0 0.5rem 0.2rem;
     font-size: 1.2rem;
 
     &:hover {
@@ -43,6 +43,9 @@
 }
 
 .Main-Controls {
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
     width: 100%;
 }
 .Main-Filters-Genres {
@@ -56,7 +59,7 @@
     background-color: vars.$color-blue;
     color: vars.$color-white;
     border: 2px solid vars.$color-blue;
-    border-radius: 30px;
+    border-radius: vars.$border-radix;
     cursor: pointer;
     padding: 0.5rem 1rem;
     margin: 0.5rem;
@@ -74,6 +77,8 @@
     align-items: center;
     display: flex;
     font-size: 1rem;
+    justify-content: center;
+    margin-bottom: 1rem;
     & input {
         padding: 0.5rem;
     }
