--- a/src/components/RecentlyViewed/RecentlyViewed.scss
+++ b/src/components/RecentlyViewed/RecentlyViewed.scss
@@ -1,13 +1,21 @@
 @use '../../styles/variables' as vars;
 
 .Recently-Viewed {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
     &--Item {
-        display: flex;
-        flex-direction: column;
-        position: relative;
+        display: grid;
+        grid-template-rows: 1fr auto;
+
+        &--Image {
+            margin: 0 auto;
+            position: relative;
+        }
+
+        &--Title {
+            text-align: center;
+        }
 
         &--Button {
             bottom: 0;
